--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,4 @@ script:
   - cd ./operator-sdk/
   - git checkout -t origin/release-4.4
   - make release
+  - /root/go-workspace/bin/operator-sdk --help
