--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 os: linux
 
+language: go
+
+go: 
+  - 1.13.x
+
 sudo: required
 
 arch:
@@ -8,8 +13,8 @@ arch:
 script:
   - sudo apt-get update; apt-get upgrade -y
   - sudo apt-get install build-essential
-  - git clone https://github.com/rpsene/goconfig.git
-  - source ./goconfig/go.sh install
+  #- git clone https://github.com/rpsene/goconfig.git
+  #- source ./goconfig/go.sh install
   - git clone https://github.com/operator-framework/operator-sdk.git
   - cd ./operator-sdk/
   - git checkout -t origin/release-4.4
