--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,11 @@ arch:
   - ppc64le
 
 script:
-  #- sudo apt-get update; apt-get upgrade -y
   - sudo apt-get install build-essential
-  #- git clone https://github.com/rpsene/goconfig.git
-  #- source ./goconfig/go.sh install
   - git clone https://github.com/operator-framework/operator-sdk.git
   - cd ./operator-sdk/
   - git checkout -t origin/release-4.4
   - make install
   - echo $GOPATH
-  # - /root/go-workspace/bin/operator-sdk --help
-  - ls /home/travis/gopath
+  - ls /home/travis/gopath/bin
+  - /home/travis/gopath/binoperator-sdk --help
