--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ script:
   - git checkout tags/$VERSION
   - make install
   - echo $GOPATH
-  - mkdir ./v$VERSION
+  - mkdir ./$VERSION
   - cp -rp /home/travis/gopath/bin/operator-sdk ./$VERSION
   - ./$VERSION/operator-sdk --help
