--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script:
 
 deploy:
   provider: script  
-  script: sudo apt-get install -y lftp; bash ftp_upload.sh
+  script: sudo apt-get install -y lftp; bash $TRAVIS_BUILD_DIR/ftp_upload.sh
   skip_cleanup: true
 
 notifications:
